Fixes home hero spacing

--- a/_scss/module/_home-hero.scss
+++ b/_scss/module/_home-hero.scss
@@ -37,7 +37,6 @@
 
   @include breakpoint(medium) {
     padding-top: 2rem;
-    padding-bottom: 0;
 
     .subhead {
       text-align: right;
